Finalize preprocessor (for now)
Preprocessor
- Add underscores to variable names
- Fix whitespace insertion for commands on single lines

Mojo-related
- Preprocess whole `src/` directory, not just `src/main/java/`
- Copy files that aren't `*.java`, but don't preprocess them
- Remove my package prefix `io.errs.*` from variable names...
- Add variables into the preprocessor!
- Add truthy variable detection (true, yes, on, etc.)

--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,7 @@
                     <visitor>true</visitor>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
@@ -159,6 +160,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -168,6 +170,19 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
